--- a/src/pages/miniprojet.astro
+++ b/src/pages/miniprojet.astro
@@ -4,7 +4,25 @@ const pageTitle = "Mini Projet - PUNTO";
 ---
 
 <BaseLayout title={pageTitle}>
-  <h1>Mini Projet - PUNTO</h1>
-  <p>PUUUUUUUNNNNNNNTTTTTTTO</p>
-  <!-- 可继续添加内容 -->
+  <script is:inline src="../scripts/punto_app.js"></script>
 </BaseLayout>
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projet Punto</title>
+</head>
+
+<body>
+    <script src="../scripts/punto_app.js"></script>
+
+    
+</body>
+
+</html> -->
+
+
