--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,13 +10,13 @@ const { title } = Astro.props;
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
   <title>{title}</title>
-  <!-- 引入全局 CSS -->
+  <!-- import global.css -->
   <link rel="stylesheet" href={new URL("/styles/global.css", import.meta.url)} />
 </head>
 <body>
   <Navbar />
   <main>
-    <slot /> <!-- 页面内容插入点 -->
+    <slot /> <!-- insert page content -->
   </main>
 </body>
 </html>
@@ -25,11 +25,11 @@ const { title } = Astro.props;
 <style>
 	#game-container {
 	  position: relative;
-	  z-index: 1; /* 确保在导航栏下方 */
+	  z-index: 1; /* nav bar should be z-index >0 so as to float over the main context */
 	  padding-top: 60px;
 	}
 	
-	/* 保持导航栏在最上层 */
+	/* keep the navbar always the top of the web page */
 	nav {
 	  position: fixed;
 	  top: 0;
@@ -37,6 +37,9 @@ const { title } = Astro.props;
 	  width: 100%;
 	  z-index: 1000;
 	}
+	main {
+    padding-top: 60px; /* add 60px to the main part, to avoid the overlap of nav bar */
+  }
   </style>
 
 <!-- <!doctype html>
