--- a/src/pages/projetfinal.astro
+++ b/src/pages/projetfinal.astro
@@ -14,6 +14,7 @@ import '../styles/projetfinal.css';
         restcountries
       </a>
     </p>
+    <p>(La premier loading prends probablement 5-10 secondes..Si vous ne voyez rien, patientez un peu..)</p>
   </div>
 
   <div id="country-list"></div>
