--- a/src/pages/exercices.astro
+++ b/src/pages/exercices.astro
@@ -67,15 +67,17 @@ import Exo18 from '../components/exercices/18_web_components.astro';
       <Exo05 />
       <Exo06 />
       <Exo07 />
+      <Exo08 />
+      <Exo09 />
       <Exo10 />
-      <!-- <Exo11 />
+      <Exo11 />
       <Exo12 />
       <Exo13 />
       <Exo14 />
       <Exo15 />
       <Exo16 />
       <Exo17 />
-      <Exo18 /> -->
+      <Exo18 />
       
       <!-- 继续插入组件 -->
     </main>
