--- a/src/pages/projetfinal.astro
+++ b/src/pages/projetfinal.astro
@@ -14,6 +14,14 @@ import '../styles/projetfinal.css';
         restcountries
       </a>
     </p>
+    <p>
+      Veuillez trouver ici le lien du vidéo de démonstration: 
+      <a href="https://youtu.be/V_zjgrYNBuQ" target="_blank" rel="noopener noreferrer">
+      <a href="https://youtu.be/V_zjgrYNBuQ" target="_blank" rel="noopener noreferrer">
+        Vidéo de Démonstration du projet final
+      </a>
+    </a>
+  </p>
     <p>(La premier loading prends probablement 5-10 secondes..Si vous ne voyez rien, patientez un peu..)</p>
   </div>
 
